--- a/frontend/auto-presenca/.env-production.env
+++ b/frontend/auto-presenca/.env-production.env
@@ -1,2 +1,2 @@
 # Dominio da API via Traefik
-VITE_API_BASE_URL=http://frequencia.simplisoft.com.br/api
+VITE_API_BASE_URL=http://frequencia.academiaarius.com/api
