--- a/frontend/auto-presenca/.env-production.env
+++ b/frontend/auto-presenca/.env-production.env
@@ -1,2 +1,3 @@
-# Dominio da API via Traefik
-VITE_API_BASE_URL=http://frequencia.academiaarius.com/api
+# frontend/auto-presenca/.env.production
+# A URL completa para sua API em produção, incluindo o prefixo da rota Flask
+VITE_API_BASE_URL=https://apifreq.academiaarius.com/api
