--- a/frontend/auto-presenca/.env.production
+++ b/frontend/auto-presenca/.env.production
@@ -1,3 +1,3 @@
 # frontend/auto-presenca/.env.production
 # A URL completa para sua API em produção, incluindo o prefixo da rota Flask
-VITE_API_BASE_URL=https://apifreq.academiaarius.com/api
+VITE_API_BASE_URL=https://apifreq.simplisoft.com.br/api
